@@ -8,3 +8,7 @@
 - spelling: buses x busses
 
 - update the web page
+
+PCIIDS:
+- another mirror at Atrey?
+- delete old DB at SF
